feat: handler make desposit transaction sync
